# AOT

./: .dockerfile  .dockerignore  README.md  pyproject.toml
dataloaders/: eval_datasets.py  image_transforms.py  train_datasets.py
tools/: demo.py  unify_datasets.py
utils/: checkpoint.py  ema.py  math.py  meters.py
