[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aot-benchmark"
version = "0.0.0"
description = "Associating Objects with Transformers for Video Object Segmentation"
requires-python = ">=3.7"

dependencies = [
    "torch",
    "torchvision>=0.24.0",
    "opencv-python",
    "Pillow>=11.0.0",
]

[project.optional-dependencies]
demo = [
    "scikit-image",
]

[tool.setuptools.packages.find]
where = ["."]